--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,43 +1,21 @@
-name: Optimized CI/CD Pipeline
+name: CI/CD Pipeline
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
       - devsecops-reports
+  pull_request:
+    branches:
+      - main
 
 jobs:
   # -----------------------
-  # Step 1: Merge second branch into main
-  # -----------------------
-  merge-branches:
-    name: Merge Branches
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # fetch full history for merge
-
-      - name: Merge devsecops-reports into main
-        run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git checkout main
-          git pull origin main
-          git merge origin/devsecops-reports --allow-unrelated-histories -m "Merge devsecops-reports into main"
-          git push origin main
-
-  # -----------------------
-  # Step 2: Build and Test
+  # Step 1: Build and Test
   # -----------------------
   build-test:
     name: Build and Test Services
     runs-on: ubuntu-latest
-    needs: merge-branches
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -54,7 +32,7 @@ jobs:
         run: npm test
 
   # -----------------------
-  # Step 3: Build Docker Images
+  # Step 2: Build Docker Images
   # -----------------------
   docker-build:
     name: Build Docker Images
@@ -83,7 +61,7 @@ jobs:
           docker push myorg/payment-service:latest
 
   # -----------------------
-  # Step 4: Deploy to Kubernetes
+  # Step 3: Deploy to Kubernetes
   # -----------------------
   deploy:
     name: Deploy to Kubernetes
@@ -99,9 +77,4 @@ jobs:
           version: '1.30.0'
 
       - name: Set Kubeconfig
-        run: echo "${{ secrets.KUBECONFIG }}" > kubeconfig && export KUBECONFIG=kubeconfig
-
-      - name: Deploy Services
-        run: |
-          kubectl apply -f k8s/order-service.yaml
-          kubectl apply -f k8s/payment-service.yaml
+        run: echo "${{ secrets.KUBECONFIG }}" > kubeconfig && export KUBECONFIG=kubec
