--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -52,3 +52,49 @@ jobs:
           docker build -t myorg/user-service ./user-service
           docker build -t myorg/reports ./reports
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker Images
+        run: |
+          docker tag myorg/order-service myorg/order-service:latest
+          docker tag myorg/payment-service myorg/payment-service:latest
+          docker tag myorg/product-service myorg/product-service:latest
+          docker tag myorg/user-service myorg/user-service:latest
+          docker tag myorg/reports myorg/reports:latest
+
+          docker push myorg/order-service:latest
+          docker push myorg/payment-service:latest
+          docker push myorg/product-service:latest
+          docker push myorg/user-service:latest
+          docker push myorg/reports:latest
+
+  # -----------------------
+  # Step 3: Deploy to Kubernetes
+  # -----------------------
+  deploy:
+    name: Deploy to Kubernetes
+    runs-on: ubuntu-latest
+    needs: docker-build
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: '1.30.0'
+
+      - name: Set Kubeconfig
+        run: echo "${{ secrets.KUBECONFIG }}" > kubeconfig && export KUBECONFIG=kubeconfig
+
+      - name: Deploy Services
+        run: |
+          kubectl apply -f k8s/order-service.yaml
+          kubectl apply -f k8s/payment-service.yaml
+          kubectl apply -f k8s/product-service.yaml
+          kubectl apply -f k8s/user-service.yaml
+          kubectl apply -f k8s/reports.yaml
