--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -10,56 +10,52 @@ on:
       - main
 
 jobs:
- 
-
   # -----------------------
-  # Step 1: Build Docker Images
+  # Step 1: Build and Test Services
   # -----------------------
-  docker-build:
-    name: Build Docker Images
+  build-test:
+    name: Build and Test Microservices
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Build Docker Images
-        run: |
-          docker build -t myorg/order-service ./order-service
-          docker build -t myorg/payment-service ./payment-service
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-      - name: Login to Docker Hub
+      - name: Install and Test Services
+        run: |
+          for service in order-service payment-service; do
+            echo "Installing and testing $service..."
+            cd $service
+            npm install
+            npm test
+            cd ..
+          done
+
+  # -----------------------
+  # Step 2: Build & Push Docker Images
+  # -----------------------
+  docker-build:
+    name: Build and Push Docker Images
+    runs-on: ubuntu-latest
+    needs: build-test
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker Images
+      - name: Build and Push Docker Images
         run: |
-           docker build -t vrunda0308/order-service ./order-service
-           docker push vrunda0308/order-service:latest
-           docker build -t vrunda0308/payment-service ./payment-service
-           docker push vrunda0308/payment-service:latest
+          docker build -t vrunda0308/order-service ./order-service
+          docker push vrunda0308/order-service:latest
 
-  # -----------------------
-  # Step 2: Deploy to Kubernetes
-  # -----------------------
-  deploy:
-    name: Deploy to Kubernetes
-    runs-on: ubuntu-latest
-    needs: docker-build
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: '1.30.0'
-
-      - name: Set Kubeconfig
-        run: echo "${{ secrets.KUBECONFIG }}" > kubeconfig && export KUBECONFIG=kubeconfig
-
-      - name: Deploy Services
-        run: |
-          kubectl apply -f k8s/order-service.yaml
-          kubectl apply -f k8s/payment-service.yaml
+          docker build -t vrunda0308/payment-service ./payment-service
+          docker push vrunda0308/payment-service:latest
